--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 15% 85%;
+    grid-template-columns: 18% 82%;
 }
 
 .sidebar {
@@ -34,38 +34,91 @@ body {
     padding: 1em;
 }
 
+.sidebar div {
+    display: flex;
+    font-size: 1rem;
+    gap: 1em;
+    margin-bottom: 1em;
+    align-items: center;
+}
+
+.sidebar .dashboard {
+    font-size: 1.4em;
+    align-items: center;
+}
+
+.dashboard svg {
+    width: 1.4em;
+}
+
 .hero {
     display: grid;
-    grid-template-columns: 3fr2em;
+    grid-template-columns: 3fr;
+    padding: 1em 2em;
 }
 
 .hero-top {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 2fr 2fr;
     margin-bottom: 1em;
 }
 
 .hero-search {
     display: flex;
-    align-self: center;
+    align-items: center;
     gap: 1em;
+}
+
+.hero-search-bar {
+    border-radius: 8px;
+    width: 100%;
+    border: 1px solid #ddd;
+    background: #ddd;
+    padding: 0.2em 0.4em;
 }
 
 .hero-notifs {
     display: flex;
     gap: 1em;
     justify-self: flex-end;
-    align-self: center;
+    align-items: center;
 }
 
 .hero-bottom {
     display: grid;
     grid-template-columns:  auto auto;
+    justify-items: stretch
+    ;
     align-items: center;
 }
 
+/* .hero-bottom .avatar {
+    width: 60px;
+    height: 60px;
+    border: 1px solid;
+    border-radius: 50%;
+    align-self: center;
+}
+
+.hero-bottom .avatar p {
+    max-height: 100%;
+    max-width: 100%;
+} */
+
 .hero-user  {
     display: flex;
+    justify-self: flex-start;
+    align-items: center;
+    gap: 1.2em;
+}
+
+.hero-user-home .greeting {
+    font-size: .7rem;
+    font-weight: 900;
+}
+
+.hero strong {
+    font-size: 1.3rem;
 }
 
 .hero-button {
@@ -73,17 +126,29 @@ body {
     gap: 1em;
     justify-content: end;
 }
+.hero-button button {
+    background: var(--main-color);
+    color: var(--main-txt-color);
+    padding: .3em 2em;
+    font-weight: 700;
+    border-radius: 1em;
+}
 
 .body {
     display: grid;
     grid-template-columns: 3fr 1fr;
     background: #f1f5f9;
+    padding: 1em;
 }
 
 .cards {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 1em;
+    gap: 2em 1em;
+}
+
+.text h1 {
+    font-size: 1.1rem;
 }
 
 .card {
@@ -92,11 +157,22 @@ body {
     width: 23em;
     height: 12em;
     border-radius: 0.5em;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2);
 }
 
 .card-design {
-    width: 0.5em;
+    width: .6em;
+    border-top-left-radius: .5em;
+    border-bottom-left-radius: .5em;
     background: var(--main-color);
+    flex-shrink: 0;
+}
+
+.card-body {
+    padding: 1em;
+    display: grid;
+    gap: 1em;
+    justify-items: end;
 }
 
 .side-body {
@@ -111,10 +187,16 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     gap: 0.5em;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2);
+    padding: 1.5em;
 }
 
 .announce-info p {
     border-bottom: 1px solid #ddd;
+}
+
+.announce-info p:last-child {
+    border: none;
 }
 
 .side-body .trending-profiles {
@@ -122,9 +204,21 @@ body {
     border-radius: 0.5em;
     display: grid;
     grid-template-columns: 1fr;
-    gap: 0.5em;
+    gap: 1em;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2);
+    padding: 1.5em;
+    justify-items: start;
 }
 
 .profile {
     display: flex;
+}
+
+.body h3 {
+    margin-bottom: .5em;
+    font-weight: 400;
+}
+
+.body p {
+    font-size: .8rem;
 }
