--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     padding: 1em;
 }
 
-.sidebar div {
+.sidebar a {
     display: flex;
     font-size: 1rem;
     gap: 1em;
@@ -43,6 +43,8 @@ body {
 }
 
 .sidebar .dashboard {
+    display: flex;
+    gap: 1em;
     font-size: 1.4em;
     align-items: center;
 }
@@ -231,4 +233,9 @@ body {
 
 .side-boy p {
     font-size: .9rem;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
