--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@
 }
 
 :root {
-    --main-txt-color: #f1f5f9;
-    --main-color: #000; 
+    --main-text-color: #ffffff;
+    --main-color: #2b6777; 
+    --accent-color: #f2f2f2;
+    --main-bg-color: #c8d8e4;
 }
 
 html {
@@ -27,7 +29,7 @@ body {
 
 .sidebar {
     background: var(--main-color);
-    color: var(--main-txt-color);
+    color: var(--main-text-color);
     grid-row: span 2;
     display: grid;
     gap: 2em;
@@ -48,6 +50,16 @@ body {
     padding: .5em;
     font-size: 1.4em;
     align-items: center;
+}
+
+.sidebar .dashboard:hover {
+    background: none;
+    color: var(--main--text-color);
+}
+
+.sidebar div:hover {
+    background: var(--main-bg-color);
+    color: #000;
 }
 
 .dashboard svg {
@@ -75,8 +87,8 @@ body {
 .hero-search-bar {
     border-radius: 8px;
     width: 100%;
-    border: 1px solid #ddd;
-    background: #ddd;
+    border: 1px solid var(--main-bg-color);
+    background: var(--main-bg-color);
     padding: 0.2em 0.4em;
 }
 
@@ -94,8 +106,7 @@ body {
 .hero-bottom {
     display: grid;
     grid-template-columns:  auto auto;
-    justify-items: stretch
-    ;
+    justify-items: stretch;
     align-items: center;
 }
 
@@ -132,7 +143,7 @@ body {
 }
 .hero-button button {
     background: var(--main-color);
-    color: var(--main-txt-color);
+    color: var(--accent-color);
     border: none;
     padding: .3em 2em;
     font-weight: 700; 
@@ -146,7 +157,7 @@ body {
 .body {
     display: grid;
     grid-template-columns: 3fr 1fr;
-    background: #f1f5f9;
+    background: var(--accent-color);
     padding: 1em;
 }
 
@@ -171,7 +182,7 @@ body {
 
 .card {
     display: flex;
-    background: #fff;
+    background: var(--main-text-color);
     width: 23em;
     height: 13em;
     border-radius: 0.5em;
@@ -181,13 +192,17 @@ body {
                 0 8px 8px rgba(0, 0, 0, 0.07),
                 0 16px 16px rgba(0, 0, 0, 0.07),
                 0 32px 32px rgba(0, 0, 0, 0.07);
-} 
+}
+
+.card svg {
+    cursor: pointer;
+}
 
 .card-design {
-    width: .6em;
+    width: .5em;
     border-top-left-radius: .5em;
     border-bottom-left-radius: .5em;
-    background: var(--main-color);
+    background: var(--main-bg-color);
     flex-shrink: 0;
 }
 
@@ -225,7 +240,7 @@ body {
 }
 
 .announce-info p {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid var(--main-bg-color);
 }
 
 .announce-info p:last-child {
