--- a/style.css
+++ b/style.css
@@ -236,7 +236,11 @@ body {
                 0 8px 8px rgba(0, 0, 0, 0.07),
                 0 16px 16px rgba(0, 0, 0, 0.07),
                 0 32px 32px rgba(0, 0, 0, 0.07);
-    padding: 1.5em;
+    padding: 1em;
+}
+
+.announce-info p {
+    padding: .5em;
 }
 
 .announce-info p {
@@ -286,4 +290,8 @@ a {
     max-height: 100%;
     max-width: 100%;
     border-radius: 50%;
+}
+
+span {
+    color: var(--main-color);
 }
